test/samples/invalid/invariant_on_function.invalid.sol
contract Some {
    /// #invariant {:msg "Error"} true;
    function other() public {}
}
